// Copyright (c) 2021 Huawei Device Co., Ltd.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
option optimize_for = LITE_RUNTIME;

message TracePluginConfig {
  repeated string ftrace_events = 1;
  repeated string bytrace_categories = 2;
  repeated string bytrace_apps = 3;
  uint32 buffer_size_kb = 4;   // for ftrace procfs
  uint32 flush_interval_ms = 5;
  uint32 flush_threshold_kb = 6;
  bool parse_ksyms = 7;  // enable /proc/kallsyms parser
  string clock = 8;
  uint32 trace_period_ms = 10;
  string raw_data_prefix = 13;
}
